log
Thu 21 Mar 2024 05:24:07 PM UTC: 
 exercises.c | 31 +++++++++++++++----------------
 1 file changed, 15 insertions(+), 16 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |       push_back(L, dato);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
ca77db6
Thu 21 Mar 2024 05:24:24 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
7f0063d
Thu 21 Mar 2024 11:38:50 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
34d2e74
Fri 22 Mar 2024 12:20:14 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
test.c: In function ‘test_elimina_elemento’:
test.c:132:5: error: implicit declaration of function ‘eliminaElementos’; did you mean ‘test_elimina_elemento’? [-Werror=implicit-function-declaration]
  132 |     eliminaElementos(L, elem);
      |     ^~~~~~~~~~~~~~~~
      |     test_elimina_elemento
cc1: all warnings being treated as errors
Compilation failed
a20cf20
Fri 22 Mar 2024 12:20:40 PM UTC: 
 exercises.c | 13 ++-----------
 1 file changed, 2 insertions(+), 11 deletions(-)
 tests:  2|3
total_score: 20/70
02ee356
 tests:  0|3
total_score: 20/70
83df71a
Fri 22 Mar 2024 07:39:28 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:10: error: implicit declaration of function ‘is_empty’ [-Werror=implicit-function-declaration]
   96 |   while(!is_empty(P1)){
      |          ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
985142e
Fri 22 Mar 2024 07:40:28 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:10: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
   96 |   while(!isEmpty(P1)){
      |          ^~~~~~~
exercises.c:99:22: error: expected ‘)’ before ‘{’ token
   99 |   while(!isEmpty(aux){
      |        ~             ^
      |                      )
exercises.c:103:1: error: expected expression before ‘}’ token
  103 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ef7ab5f
Fri 22 Mar 2024 07:42:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:10: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
   96 |   while(!isEmpty(P1)){
      |          ^~~~~~~
exercises.c:100:22: error: expected ‘)’ before ‘{’ token
  100 |   while(!isEmpty(aux){
      |        ~             ^
      |                      )
exercises.c:104:1: error: expected expression before ‘}’ token
  104 | }
      | ^
exercises.c: At top level:
exercises.c:105:1: error: expected identifier or ‘(’ before ‘}’ token
  105 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
570850d
Fri 22 Mar 2024 07:42:08 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:10: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
   96 |   while(!isEmpty(P1)){
      |          ^~~~~~~
exercises.c:100:22: error: expected ‘)’ before ‘{’ token
  100 |   while(!isEmpty(aux){
      |        ~             ^
      |                      )
exercises.c:104:1: error: expected expression before ‘}’ token
  104 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fb49573
Fri 22 Mar 2024 07:42:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:10: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
   96 |   while(!isEmpty(P1)){
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6bb5b5b
Fri 22 Mar 2024 07:44:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:10: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
   96 |   while(!isEmpty(P1)){
      |          ^~~~~~~
exercises.c:103:3: error: implicit declaration of function ‘destroyStack’ [-Werror=implicit-function-declaration]
  103 |   destroyStack(aux);
      |   ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f07325f
Fri 22 Mar 2024 07:45:18 PM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:102:10: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
  102 |   while(!isEmpty(P1)){
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cf94a02
Fri 22 Mar 2024 07:46:15 PM UTC: 
 exercises.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  3|2
total_score: 40/70
41bc5d9
Fri 22 Mar 2024 07:55:17 PM UTC: 
 exercises.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:128:14: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  128 |       if(pila->top == NULL){
      |              ^~
exercises.c:135:10: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
  135 |   if(pila->top == NULL){
      |          ^~
exercises.c:143:1: error: control reaches end of non-void function [-Werror=return-type]
  143 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a3febf2
Fri 22 Mar 2024 07:59:17 PM UTC: 
 exercises.c | 33 ++++++++++++++++++++-------------
 1 file changed, 20 insertions(+), 13 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:135:41: error: comparison between pointer and integer [-Werror]
  135 |             if (pila_vacia || pop(pila) != '(') {
      |                                         ^~
cc1: all warnings being treated as errors
Compilation failed
88951a8
Fri 22 Mar 2024 08:04:21 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:134:41: error: comparison between pointer and integer [-Werror]
  134 |             if (pila_vacia || pop(pila) != '(') {
      |                                         ^~
cc1: all warnings being treated as errors
Compilation failed
923e848
Fri 22 Mar 2024 08:04:27 PM UTC: 
 exercises.c | 55 +++++++++++++++++++++++++++++--------------------------
 1 file changed, 29 insertions(+), 26 deletions(-)
 tests:  8|1
total_score: 60/70
f37257c
